// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQAqZYPVKpozDUM-NNmYKmEz1KR4za7mO8UpZW2U_lRfzuVY"`;

exports[`feature-random should implement random correctly 2`] = `"kQA8KH7FskQSPHjg2rhCLWcY7RYhMkndfX9I07i86Tppb4i6"`;

exports[`feature-random should implement random correctly 3`] = `"kQAKNdSmqXfvAFBH68VLJZlLfe5usZVwBZ3tm5v9cr4rd77C"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQAqZYPVKpozDUM-NNmYKmEz1KR4za7mO8UpZW2U_lRfzuVY",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 19356n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQAqZYPVKpozDUM-NNmYKmEz1KR4za7mO8UpZW2U_lRfzuVY",
        "to": "kQA8KH7FskQSPHjg2rhCLWcY7RYhMkndfX9I07i86Tppb4i6",
        "type": "internal",
        "value": 9967025000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAqZYPVKpozDUM-NNmYKmEz1KR4za7mO8UpZW2U_lRfzuVY",
      "to": "kQA8KH7FskQSPHjg2rhCLWcY7RYhMkndfX9I07i86Tppb4i6",
      "type": "internal",
      "value": 9967025000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 17184n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQA8KH7FskQSPHjg2rhCLWcY7RYhMkndfX9I07i86Tppb4i6",
        "to": "kQAKNdSmqXfvAFBH68VLJZlLfe5usZVwBZ3tm5v9cr4rd77C",
        "type": "internal",
        "value": 9940118000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQA8KH7FskQSPHjg2rhCLWcY7RYhMkndfX9I07i86Tppb4i6",
      "to": "kQAKNdSmqXfvAFBH68VLJZlLfe5usZVwBZ3tm5v9cr4rd77C",
      "type": "internal",
      "value": 9940118000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 17027n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message2",
          "type": "text",
        },
        "bounce": true,
        "from": "kQAKNdSmqXfvAFBH68VLJZlLfe5usZVwBZ3tm5v9cr4rd77C",
        "to": "kQAKNdSmqXfvAFBH68VLJZlLfe5usZVwBZ3tm5v9cr4rd77C",
        "type": "internal",
        "value": 9913360000n,
      },
    ],
    "type": "sent",
  },
  {
    "message": {
      "body": {
        "text": "Message2",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAKNdSmqXfvAFBH68VLJZlLfe5usZVwBZ3tm5v9cr4rd77C",
      "to": "kQAKNdSmqXfvAFBH68VLJZlLfe5usZVwBZ3tm5v9cr4rd77C",
      "type": "internal",
      "value": 9913360000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 4364n,
    "type": "processed",
  },
]
`;
